[geo-extent] added cjs support

--- a/test.html
+++ b/test.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <script src="https://unpkg.com/flug"></script>
-    <script src="./geo-extent.js" type="module"></script>
+    <script src="./src/geo-extent.js" type="module"></script>
   </head>
   <body>
     <script>process.env.TEST_NAME = "crop"</script>
-    <script src="./test.js" type="module"></script>
+    <script src="./test/test.js" type="module"></script>
   </body>
 </html>
