replace browserify with esbuild

--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="https://unpkg.com/flug"></script>
-    <script src="./dist/geo-extent.browserify.js" type="module"></script>
+    <script src="./dist/geo-extent.bundle.js" type="module"></script>
   </head>
   <body>
     <!-- <script>process.env.TEST_NAME = "crop"</script> -->
